<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.HistoryActivity"
    android:orientation="vertical">

    <!--START TOOLBAR-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_background">

        <com.example.utils.MSPTextViewBold
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text= "@string/app_name"
            android:textColor="@color/color_text_toolbar"
            android:textSize="@dimen/text_size_toolbar_title" />

    </androidx.appcompat.widget.Toolbar>
    <!--END TOOLBAR-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/exercise_completed_header"
            android:textSize="@dimen/text_size_big"
            android:textColor="@color/color_text_big"
            android:visibility="gone"
            tools:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/tvNoDataAvailable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/empty_data"
            android:textColor="#212121"
            android:textSize="18sp"
            android:visibility="visible"
            tools:visibility="gone" />
    </LinearLayout>
</LinearLayout>