<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        android:orientation="vertical"
        tools:context=".ui.WorkoutListActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--START TOOLBAR-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_custom"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_background">

            <com.example.utils.MSPTextViewBold
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingStart="@dimen/toolbar_title_paddingStart"
                android:paddingEnd="0dp"
                android:text= "@string/app_name"
                android:textColor="@color/color_text_toolbar"
                android:textSize="@dimen/text_size_toolbar_title" />

        </androidx.appcompat.widget.Toolbar>
        <!--END TOOLBAR-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">
            <!--
            <com.example.utils.MSPTextViewBold
                android:id="@+id/tv_workout_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:padding="10dp"
                android:text= "Exercise Set"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/workout_list_title_size" />
-->


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_data_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/tv_no_items_found"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/empty_data"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_normal"
                android:textColor="@color/color_text_normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        >

        <ImageButton
            android:id="@+id/btn_start_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_start"
            android:background="@color/colorWhite"
            android:contentDescription="@string/str_start"
            />

    </LinearLayout>
    </RelativeLayout>